sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:21: error: Unmatched closing brace '}' ignored here
}
^